# ruindial

./: .gitignore  CMakeLists.txt  README.md  audio_common.py  destroyer.py
Source/: DestroyerDsp.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: install.sh
